# HelloROMpler

./: CMakeLists.txt  HelloROMpler.jucer  README.md
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: ADSRComponent.cpp  ADSRComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
